# delta_robot

./: package.xml  setup.py
delta_robot/: README.md  delta_GUI.py  gui.py  ik_node.py  inverse_kinematics.py
